If there is an error in a devtools API call, invoke the callback with a TYPE_NULL value result and log the error message.

This is a partial fix because it at least allows detecting that there
was an error, while keeping source-code-level backwards compatibility.

BUG=651082

Review-Url: https://codereview.chromium.org/2539833002
Cr-Commit-Position: refs/heads/master@{#435240}

Former-commit-id: 0c99aca28e9e59194c153ea13b85c1d7763467fb